[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mukanov Islam <islamkazproject@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "*"
fastapi = "^0.54.1"
requests = "^2.23.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
pydantic = "^1.4"
emails = "^0.5.15"
raven = "*"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.6b0"
isort = "^5.10.2"
autoflake = "^1.4"
flake8 = "^3.9.2"
pytest = "^6.2.5"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
